update xray versi terbaru

--- a/extream/index.html
+++ b/extream/index.html
@@ -11,12 +11,12 @@
 </style>
 </head>
 <body>
-<h1>BHOIKFOST YAHYA</h1>
+<h1>LAN STORE</h1>
 <h1>autoscript lite version</h1>
 <p>autoscript vps xray multi port installer successfully installed and working.</p>
 
 <p>For online documentation and support please refer to
-<a href="https://t.me/bhoikfost_yahya">Telegram</a>.</p>
+<a href="https://t.me/jaringan_vpn">Telegram</a>.</p>
 
 <p><em>Thank you for using script.</em></p>
 </body>
